tests/negative/regression/r33.orng
// r33.orng:6:24: error: recursive type detected
//     main += match const main = main ; 4 { _ => 3 } 
//                       ^
// 
fn main() -> Int { 
    main += match const main = main ; 4 { _ => 3 } 
} 
